trunk/Archive2/10/32ad53b1a611d1/output
main.cpp: In function 'int main()':
main.cpp:29:16: error: no matching function for call to 'Bar::Bar(A&)'
         Bar b(a);
                ^
main.cpp:29:16: note: candidates are:
main.cpp:17:9: note: template<class T, typename std::enable_if<std::is_base_of<A, typename std::decay<_Tp>::type>{}>::type <anonymous> > Bar::Bar(T&&)
         Bar(T&& a) {
         ^
main.cpp:17:9: note:   template argument deduction/substitution failed:
main.cpp:29:16: note:   couldn't deduce template parameter '<anonymous>'
         Bar b(a);
                ^
main.cpp:14:11: note: constexpr Bar::Bar(const Bar&)
     class Bar {
           ^
main.cpp:14:11: note:   no known conversion for argument 1 from 'A' to 'const Bar&'
main.cpp:14:11: note: constexpr Bar::Bar(Bar&&)
main.cpp:14:11: note:   no known conversion for argument 1 from 'A' to 'Bar&&'
main.cpp:30:19: error: no matching function for call to 'Bar::Bar(A)'
         Bar c(A(1));
                   ^
main.cpp:30:19: note: candidates are:
main.cpp:17:9: note: template<class T, typename std::enable_if<std::is_base_of<A, typename std::decay<_Tp>::type>{}>::type <anonymous> > Bar::Bar(T&&)
         Bar(T&& a) {
         ^
main.cpp:17:9: note:   template argument deduction/substitution failed:
main.cpp:30:19: note:   couldn't deduce template parameter '<anonymous>'
         Bar c(A(1));
                   ^
main.cpp:14:11: note: constexpr Bar::Bar(const Bar&)
     class Bar {
           ^
main.cpp:14:11: note:   no known conversion for argument 1 from 'A' to 'const Bar&'
main.cpp:14:11: note: constexpr Bar::Bar(Bar&&)
main.cpp:14:11: note:   no known conversion for argument 1 from 'A' to 'Bar&&'
main.cpp:31:27: error: no matching function for call to 'Bar::Bar(std::remove_reference<A&>::type)'
         Bar d(std::move(a));
                           ^
main.cpp:31:27: note: candidates are:
main.cpp:17:9: note: template<class T, typename std::enable_if<std::is_base_of<A, typename std::decay<_Tp>::type>{}>::type <anonymous> > Bar::Bar(T&&)
         Bar(T&& a) {
         ^
main.cpp:17:9: note:   template argument deduction/substitution failed:
main.cpp:31:27: note:   couldn't deduce template parameter '<anonymous>'
         Bar d(std::move(a));
                           ^
main.cpp:14:11: note: constexpr Bar::Bar(const Bar&)
     class Bar {
           ^
main.cpp:14:11: note:   no known conversion for argument 1 from 'std::remove_reference<A&>::type {aka A}' to 'const Bar&'
main.cpp:14:11: note: constexpr Bar::Bar(Bar&&)
main.cpp:14:11: note:   no known conversion for argument 1 from 'std::remove_reference<A&>::type {aka A}' to 'Bar&&'
main.cpp:34:18: error: no matching function for call to 'test(A)'
         test(A(1));
                  ^
main.cpp:34:18: note: candidates are:
main.cpp:22:10: note: void test(Bar)
     void test(Bar x) { std::cout << "Bar" << std::endl; }
          ^
main.cpp:22:10: note:   no known conversion for argument 1 from 'A' to 'Bar'
main.cpp:24:10: note: void test(std::string)
     void test(std::string x) { std::cout << "String: " << x << std::endl; }
          ^
main.cpp:24:10: note:   no known conversion for argument 1 from 'A' to 'std::string {aka std::basic_string<char>}'
